syntax = "proto3";

package user.type;

message User {
  string name = 1;
  string display_name = 2;
}
